--- a/admin/xinjianqiandao.html
+++ b/admin/xinjianqiandao.html
@@ -97,7 +97,7 @@
           <td>签到课程</td>
           <td>
             <div class="lesson-keyvalue">
-              <input id="keyword" type="text"  autocomplete="off">
+              <input id="keyword" type="text" placeholder="输入课程名称或编号"  autocomplete="off">
               <div></div>
               <!-- <i class="fa fa-chevron-down fa-1g" aria-hidden="true"></i> -->
             </div>
